--- a/public/index.html
+++ b/public/index.html
@@ -16,20 +16,27 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <style>
   #banner {
-    background-image: url("/Users/Jake/Documents/GitHub/foodsafety_pg/static/banner-bg.jpg");
+    background-image: url("https://images.pexels.com/photos/349610/pexels-photo-349610.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=");
     color: black;
+    background-size: cover;
   }
   #map { 
     height: 400px;
     border: 1pt solid black; 
+  }
+  #banner-text {
+    text-align: left;
   }
   </style>
 </head>
 <body>
 
 <div id="banner" class="jumbotron text-center" style="margin-bottom:0">
-  <h1>Prince George's County Food Inspections</h1>
-  <p>Helping you find safe and healthy places to eat in PG!</p> 
+  <div id="banner-text">
+      <h1>Prince George's County Food Inspections</h1>
+      <p>Helping you find safe and healthy places to eat in PG!</p>
+  </div>
+   
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -88,8 +95,10 @@
         </div>
         <div class="col-md-4">
           <div class="card mb-4 shadow-sm">
+              
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
-          </div>
+              
+            </div>
           </div>
           <div class="col-md-4">
             <div class="card mb-4 shadow-sm">
