nav bar light change

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <style>
   #banner {
     background-image: url("https://images.pexels.com/photos/349610/pexels-photo-349610.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=");
-    color: black;
+    color: darkslategrey;
     background-size: cover;
   }
   #map { 
@@ -39,7 +39,7 @@
    
 </div>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<nav class="navbar navbar-expand-sm bg-light navbar-light">
   <a class="navbar-brand" href="#">Home</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
