--- a/public/about.html
+++ b/public/about.html
@@ -37,13 +37,15 @@
   </div>
 
   <nav class="navbar navbar-expand-sm bg-light navbar-light">
-    <a class="navbar-brand" href="index.html">PGC</a>
+    <!-- <a class="navbar-brand" href="index.html">PGC</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
-    </button>
+    </button> -->
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
-        <li class="nav-item" href="index.html">Home</li>
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link active" href="about.html">About</a>
         </li>
