--- a/public/about.html
+++ b/public/about.html
@@ -15,39 +15,25 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <style>
-    #banner {
-      background-image: url("/Users/Jake/Documents/GitHub/foodsafety_pg/static/banner-bg.jpg");
-      color: black;
-    }
-
-    #map {
-      height: 400px;
-      border: 1pt solid black;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
+  <link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
 </head>
 
 <body>
 
-  <div id="banner" class="jumbotron jumbotron-fluid text-center"
-    style="background-image: url(static/banner-bg.jpg); background-size: cover; margin-bottom:0;">
+  <div id="banner" class="jumbotron text-center" style="margin-bottom:0">
     <h1>Prince George's County Food Inspections</h1>
     <p>Helping you find safe and healthy places to eat in PG!</p>
   </div>
 
   <nav class="navbar navbar-expand-sm bg-light navbar-light">
-    <!-- <a class="navbar-brand" href="index.html">PGC</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button> -->
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="about.html">About</a>
+          <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="docs.html">Documentation</a>
