--- a/public/about.html
+++ b/public/about.html
@@ -22,8 +22,10 @@
 <body>
 
   <div id="banner" class="jumbotron text-center" style="margin-bottom:0">
-    <h1>Prince George's County Food Inspections</h1>
-    <p>Helping you find safe and healthy places to eat in PG!</p>
+    <div id="banner-text">
+      <h1>Prince George's County Food Inspections</h1>
+      <p>Helping you find safe and healthy places to eat in PG!</p>
+    </div>
   </div>
 
   <nav class="navbar navbar-expand-sm bg-light navbar-light">
