--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
   <link rel="stylesheet" href="styles.css">
-  <link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
+  <link rel='icon' href='../static/favicon.ico' type='image/x-icon' />
 </head>
 
 <body>
