removed in-line card style

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
             <h2>Filters</h2>
             <br>
             <div class="filters">
-              <div class="card" style="width: 18rem;">
+              <div class="card">
                 <div class="card-body">
                   <p class="card-text">
 
