--- a/public/index.html
+++ b/public/index.html
@@ -1,171 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>PG County Food Inspections</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
-      integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
-      crossorigin="" />
-      <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
-      integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
-      crossorigin=""></script>
-      <script src="./leaflet-providers.js"></script>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-      <link rel="stylesheet" href="styles.css">
-      <link rel='icon' href='../static/favicon.ico' type='image/x-icon' />
-    </head>
-    <body>
-      <div id="banner" class="jumbotron text-center" style="margin-bottom:0">
-        <div id="banner-text">
-          <h1>Prince George's County Food Inspections</h1>
-          <p>Helping you find safe and healthy places to eat in PG!</p>
-        </div>
-      </div>
-      <nav class="navbar navbar-expand-sm bg-light navbar-light">
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="docs.html">Documentation</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-      <div class="container" style="margin-top:30px">
-        <div class="row">
-          <div class="col-sm-4">
+
+<head>
+  <title>PG County Food Inspections</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
+    integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+    crossorigin="" />
+  <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"
+    integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
+    crossorigin=""></script>
+  <script src="./leaflet-providers.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="styles.css">
+  <link rel='icon' href='../static/favicon.ico' type='image/x-icon' />
+</head>
+
+<body>
+  <div id="banner" class="jumbotron text-center" style="margin-bottom:0">
+    <div id="banner-text">
+      <h1>Prince George's County Food Inspections</h1>
+      <p>Helping you find safe and healthy places to eat in PG!</p>
+    </div>
+  </div>
+  <nav class="navbar navbar-expand-sm bg-light navbar-light">
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="docs.html">Documentation</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div class="container" style="margin-top:30px">
+    <div class="row">
+      <div class="col-sm-4">
 
 
-            <!-- Filter layout borrowed from bootsnipp user: vosidiy ---------->
-            <h2 class="display-4">Filters</h2>
-            <div class="card">
-              <article class="card-group-item">
+        <!-- Filter layout borrowed from bootsnipp user: vosidiy ---------->
+        <h2 class="display-4">Filters</h2>
+        <div class="card">
+          <article class="card-group-item">
 
-                <header class="card-header">
-                  <h6 class="title">Eatery Category </h6>
-                </header>
+            <header class="card-header">
+              <h6 class="title">Eatery Category </h6>
+            </header>
 
-                <div class="filter-content">
-                  <div class="card-body">
-                    <script type="text/javascript">
+            <div class="filter-content">
+              <div class="card-body">
+                <form>
+                  <label class="form-check">
+                    <input class="form-check-input" name="filter-option" type="checkbox" id="fastfood"
+                      value="Fast Food">
+                    <span class="form-check-label">
+                      Fast Food
+                    </span>
+                  </label> <!-- form-check.// -->
+                  <label class="form-check">
+                    <input class="form-check-input" name="filter-option" type="checkbox" id="fullservice"
+                      value="Full Service">
+                    <span class="form-check-label">
+                      Full Service
+                    </span>
+                  </label> <!-- form-check.// -->
+                  <label class="form-check">
+                    <input class="form-check-input" name="filter-option" type="checkbox" id="constore"
+                      value="Convenience Store">
+                    <span class="form-check-label">
+                      Convenience Store
+                    </span>
+                  </label> <!-- form-check.// -->
+                  <label class="form-check">
+                    <input class="form-check-input" name="filter-option" type="checkbox" id="carryout"
+                      value="Carry-out">
+                    <span class="form-check-label">
+                      Carry-out
+                    </span>
+                  </label> <!-- form-check.// -->
+                  <label class="form-check">
+                    <input class="form-check-input" name="filter-option" type="checkbox" id="grocstore"
+                      value="Grocery Store">
+                    <span class="form-check-label">
+                      Grocery Store
+                    </span>
+                  </label> <!-- form-check.// -->
+                  <label class="form-check">
+                    <input class="form-check-input" name="filter-option" type="checkbox" id="college"
+                      value="College/University">
+                    <span class="form-check-label">
+                      College/University
+                    </span>
+                  </label> <!-- form-check.// -->
+                  <label class="form-check">
+                    <input class="form-check-input" name="filter-option" type="checkbox" id="publicschool"
+                      value="Public School">
+                    <span class="form-check-label">
+                      Public School
+                    </span>
+                  </label> <!-- form-check.// -->
+                </form>
+                <br>
+                <button id="filter-btn" type="button" class="btn btn-block btn-primary"
+                  onclick="filter()">Filter</button>
 
-                    function filter() {
-                      console.log('filtering');
-
-                      let categoryFastfood = document.querySelector(".form-check-input").value;
-                      console.log(categoryFastfood)
-                    }
-                    </script>
-                  <form>
-                    <label class="form-check">
-                      <input class="form-check-input" type="checkbox" id="fastfood" value="Fast Food">
-                      <span class="form-check-label">
-                        Fast Food
-                      </span>
-                    </label> <!-- form-check.// -->
-                    <label class="form-check">
-                      <input class="form-check-input" type="checkbox" id="fullservice" value="Full Service">
-                      <span class="form-check-label">
-                        Full Service
-                      </span>
-                    </label>  <!-- form-check.// -->
-                    <label class="form-check">
-                      <input class="form-check-input" type="checkbox" id="constore" value="Convenience Store">
-                      <span class="form-check-label">
-                        Convenience Store
-                      </span>
-                    </label>  <!-- form-check.// -->
-                    <label class="form-check">
-                      <input class="form-check-input" type="checkbox" id="carryout" value="Carry-out">
-                      <span class="form-check-label">
-                        Carry-out
-                      </span>
-                    </label>  <!-- form-check.// -->
-                    <label class="form-check">
-                      <input class="form-check-input" type="checkbox" id="grocstore" value="Grocery Store">
-                      <span class="form-check-label">
-                        Grocery Store
-                      </span>
-                    </label>  <!-- form-check.// -->
-                    <label class="form-check">
-                      <input class="form-check-input" type="checkbox" id="college" value="College/University">
-                      <span class="form-check-label">
-                        College/University
-                      </span>
-                    </label>  <!-- form-check.// -->
-                    <label class="form-check">
-                      <input class="form-check-input" type="checkbox" id="publicschool" value="Public School">
-                      <span class="form-check-label">
-                        Public School
-                      </span>
-                    </label>  <!-- form-check.// -->
-                  </form>
-                  <br>
-                  <button type="button" class="btn btn-block btn-primary" onclick="filter()">Filter</button>
-
-                  </div> <!-- card-body.// -->
-                </div>
-
-              </article> <!-- card-group-item.// -->
-
-            </div> <!-- card.// -->
-            <!--                  END FILTER ---------------------------------->
-            <br>
-
-            <hr class="d-sm-none">
-          </div>
-          <div class="col-sm-8">
-            <h2 class="display-4">Map</h2>
-            <br>
-            <div id="mapid">
+              </div> <!-- card-body.// -->
             </div>
-            <p>The map</p>
-            <div class="container">
-              <div class="wrapper">
-                <div class="header">API Loader</div>
-                <button class="button" onclick="loadData()">Load Some JSON from a server</button>
-                <br><br>
-                <div class="content"></div>
-                <div class="footer"></div>
-              </div>
-            </div>
-          </div>
-        </div>
+
+          </article> <!-- card-group-item.// -->
+
+        </div> <!-- card.// -->
+        <!--                  END FILTER ---------------------------------->
+        <br>
+
+        <hr class="d-sm-none">
       </div>
-      <div class="album py-5 bg-light">
+      <div class="col-sm-8">
+        <h2 class="display-4">Map</h2>
+        <br>
+        <div id="mapid">
+        </div>
+        <p>The map</p>
         <div class="container">
-          <div class="row">
-            <div class="col-md-4">
-              <div class="card mb-4 shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
-                </div>
-              </div>
-              <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                  <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="card mb-4 shadow-sm">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="text-center" style="margin-bottom:0">
-                <p>Made with ❤ by Group 18 - INST 377.</p>
-                <p>Team members: Matt Ye, Jake Cupani, Nadine Shaker, Will Kraft, Gyan Kadariya, Aparna Ranganathan</p>
-              </div>
-              <script src="loadData.js"></script>
-              <script src="map.js"></script>
-            </body>
-          </html>
+          <div class="wrapper">
+            <div class="header">API Loader</div>
+            <button class="button" onclick="loadData()">Load Some JSON from a server</button>
+            <br><br>
+            <div class="content"></div>
+            <div class="footer"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="album py-5 bg-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card mb-4 shadow-sm">
+            <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="text-center" style="margin-bottom:0">
+      <p>Made with ❤ by Group 18 - INST 377.</p>
+      <p>Team members: Matt Ye, Jake Cupani, Nadine Shaker, Will Kraft, Gyan Kadariya, Aparna Ranganathan</p>
+    </div>
+    <script src="filterData.js"></script>
+    <script src="loadData.js"></script>
+    <script src="map.js"></script>
+
+</body>
+
+</html>
