update docs page

--- a/public/docs.html
+++ b/public/docs.html
@@ -51,26 +51,14 @@
   <div class="container" style="margin-top:30px">
     <div class="row">
       <div class="col-sm-4">
-        <h2>Filters</h2>
+        <h2>How to use our site?</h2>
         <div class="filters">
 
         </div>
 
         <hr class="d-sm-none">
       </div>
-      <div class="col-sm-8">
-        <h2>Map</h2>
-        <br>
-        <div id="mapid">
-
-        </div>
-        <p>The map</p>
-        <div class="container">
-          <div class="wrapper">
-            <div class="header">API Loader</div>
-            <button class="button" onclick="loadData()">Load Some JSON from a server</button>
-            <div class="content"></div>
-            <div class="footer"></div>
+      
           </div>
         </div>
       </div>
