dynamic port for heroku

--- a/public/about.html
+++ b/public/about.html
@@ -17,6 +17,9 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" href="favicon.ico" />
+  <script>
+    console.log(1);
+  </script>
 </head>
 
 <body>
