--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="styles.css">
-  <link rel='icon' href='../static/favicon.ico' type='image/x-icon' />
+  <link rel="shortcut icon" href="favicon.ico" />
 </head>
 
 <body>
