--- a/public/index.html
+++ b/public/index.html
@@ -18,37 +18,61 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" href="favicon.ico" />
+  <!--Import fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Merriweather+Sans:300|Nunito&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
+
   <div id="banner" class="jumbotron text-center" style="margin-bottom:0">
     <div id="banner-text">
-      <h1>Prince George's County Food Inspections</h1>
+      <h1 class="header display-4">Prince George's County Food Inspections</h1>
       <p>Helping you find safe and healthy places to eat in PG!</p>
     </div>
   </div>
-  <nav class="navbar navbar-expand-sm bg-light navbar-light">
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" href="index.html">Home</a>
+
+  <!-- START NAVBAR -->
+
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">PGCFI</a>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mx-auto nav-fill w-100">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="about.html">About</a>
         </li>
+
         <li class="nav-item">
           <a class="nav-link" href="docs.html">Documentation</a>
         </li>
       </ul>
+
     </div>
   </nav>
-  <div class="container" style="margin-top:30px">
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <h2 class="section-head" style="margin-top: 10px">Get Started</h2>
+        <p>Get started by filtering the type of category you want to see. The map will then update and you can select the restaurant you want to see health inspection results from. </p>
+      </div>
+    </div>
+    <hr>
     <div class="row">
       <div class="col-sm-4">
 
 
         <!-- Filter layout borrowed from bootsnipp user: vosidiy ---------->
-        <h2 class="display-4">Filters</h2>
+        <h2 class="section-head">Filters</h2>
         <div class="card">
           <article class="card-group-item">
 
@@ -125,7 +149,7 @@
         <hr class="d-sm-none">
       </div>
       <div class="col-sm-8">
-        <h2 class="display-4">Map</h2>
+        <h2 class="section-head">Map</h2>
         <br>
         <div id="mapid">
         </div>
@@ -142,27 +166,34 @@
       </div>
     </div>
   </div>
-  <div class="album py-5 bg-light">
+  <div class="album py-5">
     <div class="container">
       <div class="row">
         <div class="col-md-4">
+          <!--Card Label-->
+          <h3 class="text-center">Name & Location</h3>
           <div class="card mb-4 shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
           </div>
         </div>
         <div class="col-md-4">
+          <!--Card Label-->
+          <h3 class="text-center">Cleanliness</h3>
           <div class="card mb-4 shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
           </div>
         </div>
         <div class="col-md-4">
+          <!--Card Label-->
+          <h3 class="text-center">Inspections Passed/Failed</h3>
           <div class="card mb-4 shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
           </div>
         </div>
       </div>
     </div>
-    <div class="text-center" style="margin-bottom:0">
+
+    <div class="footer text-center" >
       <p>Made with ❤ by Group 18 - INST 377.</p>
       <p>Team members: Matt Ye, Jake Cupani, Nadine Shaker, Will Kraft, Gyan Kadariya, Aparna Ranganathan</p>
     </div>
