--- a/public/about.html
+++ b/public/about.html
@@ -18,8 +18,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" href="favicon.ico" />
   <!--Import fonts-->
-
-  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Merriweather+Sans:300|Nunito&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Merriweather+Sans:300|Nunito:400,700&display=swap" rel="stylesheet">
 
 </head>
 
