--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" href="favicon.ico" />
   <!--Import fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Merriweather+Sans:300|Nunito&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Merriweather+Sans:300|Nunito:400,700&display=swap" rel="stylesheet">
 
 </head>
 
@@ -62,7 +62,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
-        <h2 class="section-head" style="margin-top: 10px">Get Started</h2>
+        <h2 class="section-head">Get Started</h2>
         <p>Get started by filtering the type of category you want to see. The map will then update and you can select the restaurant you want to see health inspection results from. </p>
       </div>
     </div>
@@ -72,7 +72,7 @@
 
 
         <!-- Filter layout borrowed from bootsnipp user: vosidiy ---------->
-        <h2 class="section-head">Filters</h2>
+        <h2 class="header">Filters</h2>
         <div class="card">
           <article class="card-group-item">
 
@@ -149,18 +149,15 @@
         <hr class="d-sm-none">
       </div>
       <div class="col-sm-8">
-        <h2 class="section-head">Map</h2>
+        <h2 class="header">Map</h2>
         <br>
         <div id="mapid">
         </div>
-        <p>The map</p>
+        <!-- <p>The map</p> -->
         <div class="container">
           <div class="wrapper">
-            <div class="header">API Loader</div>
-            <button class="button" onclick="loadData()">Load Some JSON from a server</button>
-            <br><br>
-            <div class="content"></div>
-            <div class="footer"></div>
+            <!-- <div class="header">API Loader</div> -->
+            <button class="btn btn-block btn-primary" onclick="loadData()">Load Some JSON from a server</button>
           </div>
         </div>
       </div>
@@ -171,32 +168,35 @@
       <div class="row">
         <div class="col-md-4">
           <!--Card Label-->
-          <h3 class="text-center">Name & Location</h3>
+          <h3 class="results">Name & Location</h3>
           <div class="card mb-4 shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
           </div>
         </div>
         <div class="col-md-4">
           <!--Card Label-->
-          <h3 class="text-center">Cleanliness</h3>
+          <h3 class="results">Cleanliness</h3>
           <div class="card mb-4 shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
           </div>
         </div>
         <div class="col-md-4">
           <!--Card Label-->
-          <h3 class="text-center">Inspections Passed/Failed</h3>
+          <h3 class="results">Inspections Passed/Failed</h3>
           <div class="card mb-4 shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
           </div>
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="footer text-center" >
+  <footer>
+    <div class="text-center" >
       <p>Made with ❤ by Group 18 - INST 377.</p>
       <p>Team members: Matt Ye, Jake Cupani, Nadine Shaker, Will Kraft, Gyan Kadariya, Aparna Ranganathan</p>
     </div>
+  </footer>
     <script src="filterData.js"></script>
     <script src="loadData.js"></script>
     <script src="map.js"></script>
