--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
   <!-- START NAVBAR -->
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">PGCFI</a>
+    <!-- <a class="navbar-brand" href="#">PG  CFI</a> -->
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -58,7 +58,7 @@
     </div>
   </nav>
 
-
+  <br>
   <div class="container">
     <div class="row">
       <div class="col-sm-12">
@@ -168,7 +168,7 @@
       <div class="row">
         <div class="col-md-4">
           <!--Card Label-->
-          <h3 class="results">Name & Location</h3>
+          <h3 class="results">Address</h3>
           <div class="card mb-4 shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
           </div>
@@ -182,7 +182,7 @@
         </div>
         <div class="col-md-4">
           <!--Card Label-->
-          <h3 class="results">Inspections Passed/Failed</h3>
+          <h3 class="results">Inspections</h3>
           <div class="card mb-4 shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
           </div>
