--- a/public/about.html
+++ b/public/about.html
@@ -34,7 +34,7 @@
   <!-- START NAVBAR -->
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">PGCFI</a>
+    <!-- <a class="navbar-brand" href="index.html">PGCFI</a> -->
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -56,6 +56,7 @@
 
     </div>
   </nav>
+  <br>
   <div class="container">
     <div class="row">
       <div class="col sm-12 ">
