--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="shortcut icon" href="favicon.ico" />
   <!--Import fonts-->
-  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Merriweather+Sans:300|Nunito:400,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Merriweather+Sans:300|Nunito:400,700&display=swap"
+    rel="stylesheet">
 
 </head>
 
@@ -37,7 +38,8 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <!-- <a class="navbar-brand" href="#">PG  CFI</a> -->
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -63,7 +65,8 @@
     <div class="row">
       <div class="col-sm-12">
         <h2 class="section-head">Get Started</h2>
-        <p>Get started by filtering the type of category you want to see. The map will then update and you can select the restaurant you want to see health inspection results from. </p>
+        <p>Get started by filtering the type of category you want to see. The map will then update and you can select
+          the restaurant you want to see health inspection results from. </p>
       </div>
     </div>
     <hr>
@@ -192,14 +195,14 @@
   </div>
 
   <footer>
-    <div class="text-center" >
+    <div class="text-center">
       <p>Made with ❤ by Group 18 - INST 377.</p>
       <p>Team members: Matt Ye, Jake Cupani, Nadine Shaker, Will Kraft, Gyan Kadariya, Aparna Ranganathan</p>
     </div>
   </footer>
-    <script src="filterData.js"></script>
-    <script src="loadData.js"></script>
-    <script src="map.js"></script>
+  <script src="filterData.js"></script>
+  <script src="loadData.js"></script>
+  <script src="map.js"></script>
 
 </body>
 
