created docs page

--- a/public/docs.html
+++ b/public/docs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>PG County Food Inspections - About</title>
+  <title>PG County Food Inspections - Documentation</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -62,20 +62,17 @@
   <div class="container">
     <div class="row">
       <div class="col sm-12 ">
-        <h1 class="section-head">About our project</h1>
+        <h1 class="section-head">Documentation</h1>
         <hr>
-        <h2 class="header">Motivation & Rationale</h2>
-        <p>Food safety is a top priority for any community wishing to keep its residents safe and healthy.
-          According to the <a href="https://www.who.int/" target="_blank">World Health Organization</a>,
-          600M people become ill from contaminated food, and ~420,000 people die every year<sup><a
-              href="https://www.who.int/news-room/fact-sheets/detail/food-safety" target="_blank">1</a></sup>.</p>
-        <p><strong>Currently, there is no easily accessible and intuitive way to determine if the places they go to are
-            compliant with food inspections.</strong></p>
-        <p>We hope to solve this problem with this web application.</p>
+        <h2 class="header">Data Source</h2>
+        <p>This application pulls data from the <a href="https://data.princegeorgescountymd.gov/" target="_blank">Prince
+            George's County Open Data Project</a>.
+          Specifically, we are using the Food Inspections API to pull data on all food service facilities in PG County,
+          MD. This data is updated daily.</p>
         <br>
-        <div class="team">
-          <h2 class="header">Meet the Team</h2>
-        </div>
+        <h2 class="header">Technology Stack</h2>
+        
+
       </div>
 
     </div>
