--- a/public/about.html
+++ b/public/about.html
@@ -57,7 +57,7 @@
               <h2 class="header">Motivation & Rationale</h2>
               <p>Food safety is a top priority for any community wishing to keep its residents safe and healthy.
                 According to the <a href="https://www.who.int/" target="_blank">World Health Organization</a>,
-                600,000,000 people become ill from contaminated food, and ~420,000 people die every year<sup><a
+                600 million people become ill from contaminated food, and ~420,000 people die every year<sup><a
                 href="https://www.who.int/news-room/fact-sheets/detail/food-safety" target="_blank">1</a></sup>.</p>
                 <p><strong>Currently, there is no easily accessible and intuitive way to determine if the places they go to are
                 compliant with food inspections.</strong></p>
