--- a/public/about.html
+++ b/public/about.html
@@ -87,7 +87,7 @@
                           <div class="flip-card">
                             <div class="flip-card-inner">
                               <div class="flip-card-front">
-                                <img src="img_avatar.png" alt="Avatar" style="width:300px;height:300px;">
+                                <img src="matt.jpeg" alt="Avatar" style="width:300px;height:300px;">
                               </div>
                               <div class="flip-card-back">
                                 <h1>Matt Ye</h1>
