--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,7 @@
                 </form>
                 <br>
                 <button id="filter-btn" type="button" class="btn btn-block btn-primary"
-                  onclick="filter()">Filter</button>
+                  onclick="filterData()">Filter</button>
 
               </div> <!-- card-body.// -->
             </div>
