--- a/public/index.html
+++ b/public/index.html
@@ -168,7 +168,7 @@
         <h2 class="header">List</h2>
         <div class="card">
           <div class="card-body">
-            <p id="listing"></p>
+            <p id="listing">No filters currently selected</p>
           </div>
 
         </div>
