added reset button

--- a/public/index.html
+++ b/public/index.html
@@ -139,6 +139,9 @@
                 <br>
                 <button id="filter-btn" type="button" class="btn btn-block btn-primary"
                   onclick="filterData()">Filter</button>
+                  <button type="button" class="btn btn-block btn-primary" onclick="resetMap()">
+                    Reset
+                  </button>
 
               </div> <!-- card-body.// -->
             </div>
