--- a/public/index.html
+++ b/public/index.html
@@ -163,7 +163,7 @@
         <div class="container">
           <div class="wrapper">
             <!-- <div class="header">API Loader</div> -->
-            <button class="btn btn-block btn-primary" onclick="loadData()">Load Some JSON from a server</button>
+            <button class="btn btn-block btn-primary" onclick="loadData()">Load Data</button>
           </div>
         </div>
       </div>
