popup click data

--- a/public/index.html
+++ b/public/index.html
@@ -216,6 +216,7 @@
   <script src="filterData.js"></script>
   <script src="loadData.js"></script>
   <script src="map.js"></script>
+  <script src="popupData.js"></script>
 
 </body>
 
