update button and about page

--- a/public/about.html
+++ b/public/about.html
@@ -65,7 +65,7 @@
                 While other counties may have more money, the residents of Prince George’s county lack the same resources. We believe everyone deserves
               to know what exactly is going into their body, and if that's going to be safe. This is why we've create PGCFI. </p>
                 <p><strong>Currently, there is no easily accessible and intuitive way to determine compliant restaurants and eateries.</strong></p>
-                <p>We hope to solve this problem with this web application.</p>
+                <p>We hope this web application will help those in PG county easily get food safety results to make better informed eating decisions.</p>
                 <br>
                 <div class="team">
                   <h2 class="header">Meet the Team</h2>
