update static folder

--- a/public/about.html
+++ b/public/about.html
@@ -76,7 +76,7 @@
                             <div class="flip-card">
                               <div class="flip-card-inner">
                                 <div class="flip-card-front">
-                                  <img src="jake.jpg" alt="Avatar">
+                                  <img src="/static/jake.jpg" alt="Avatar">
                                 </div>
                                 <div class="flip-card-back">
                                   <div class="team-name">
@@ -92,7 +92,7 @@
                             <div class="flip-card">
                               <div class="flip-card-inner">
                                 <div class="flip-card-front">
-                                  <img src="matt.jpeg" alt="Avatar">
+                                  <img src="/static/matt.jpeg" alt="Avatar">
                                 </div>
                                 <div class="flip-card-back">
                                   <div class="team-name">
@@ -110,7 +110,7 @@
                             <div class="flip-card">
                               <div class="flip-card-inner">
                                 <div class="flip-card-front">
-                                  <img src="aparna.jpg" alt="Avatar">
+                                  <img src="/static/aparna.jpg" alt="Avatar">
                                 </div>
                                 <div class="flip-card-back">
                                   <div class="team-name">
@@ -130,7 +130,7 @@
                             <div class="flip-card">
                               <div class="flip-card-inner">
                                 <div class="flip-card-front">
-                                  <img src="Gyan.jpeg" alt="Avatar">
+                                  <img src="/static/Gyan.jpeg" alt="Avatar">
                                 </div>
                                 <div class="flip-card-back">
                                   <div class="team-name">
@@ -149,7 +149,7 @@
                             <div class="flip-card">
                               <div class="flip-card-inner">
                                 <div class="flip-card-front">
-                                  <img src="Nadine.JPG" alt="Avatar">
+                                  <img src="/static/Nadine.JPG" alt="Avatar">
                                 </div>
                                 <div class="flip-card-back">
                                   <div class="team-name">
@@ -165,7 +165,7 @@
                             <div class="flip-card">
                               <div class="flip-card-inner">
                                 <div class="flip-card-front">
-                                  <img src="will.jpg" alt="Avatar">
+                                  <img src="/static/will.jpg" alt="Avatar">
                                 </div>
                                 <div class="flip-card-back">
                                   <div class="team-name">
