updated inspection results

--- a/public/index.html
+++ b/public/index.html
@@ -167,40 +167,46 @@
           </div>
         </div>
       </div>
-      
+
 
     </div>
   </div>
   <div class="album py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
-          <!--Card Label-->
-          <h3 class="results">Address</h3>
-          <div class="card mb-4 shadow-sm">
-              <span id="address">
-                  <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
-                    </span>
+        <div class="col-sm-12">
+
+          <h2 class="header">Results</h3>
+          <div class="card">
+            <div class="card-body">
+              <div class="row">
+
+                <div class="col-sm-3">
+                  <h3 class="results">Name</h3>
+                  <p id="name"></p>
+                </div>
+
+                <div class="col-sm-3">
+                  <h3 class="results">Location</h3>
+                  <p id="address"></p>
+
+                </div>
+
+                <div class="col-sm-6">
+                  <h3 class="results">Inspection Results</h3>
+                  <p id="inspection_results"></p>
+                </div>
+
+              </div>
+
             </div>
-        </div>
-        <div class="col-md-4">
-          <!--Card Label-->
-          <h3 class="results">Cleanliness</h3>
-          <div class="card mb-4 shadow-sm">
-              <span id="cleanliness">
-                  <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
-                    </span>          
-            </div>
-        </div>
-        <div class="col-md-4">
-          <!--Card Label-->
-          <h3 class="results">Inspections</h3>
-          <div class="card mb-4 shadow-sm">
-              <span id="inspection_results">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225">
-              </span>
+
           </div>
+          <br>
+
         </div>
+
+
       </div>
     </div>
   </div>
