--- a/src/docs.html
+++ b/src/docs.html
@@ -27,8 +27,7 @@
 
   <div id="banner" class="jumbotron text-center" style="margin-bottom:0">
     <div id="banner-text">
-      <h1 class="header display-4">Prince George's County Food Inspections</h1>
-      <p>Helping you find safe and healthy places to eat in PG!</p>
+      <img src="pg-logo.png" width="25%">
     </div>
   </div>
 
@@ -64,6 +63,15 @@
       <div class="col sm-12 ">
         <h1 class="section-head">Documentation</h1>
         <hr>
+        <div class="row">
+          <div class="col-sm-12">
+            <h2 class="section-head">Get Started!</h2>
+            <p>Get started by filtering the type of category you want to see. The map will then update and you can
+              select
+              the restaurant you want to see health inspection results from. </p>
+          </div>
+        </div>
+        <hr>
         <h2 class="header">Data Source</h2>
         <p>This application pulls data from the <a href="https://data.princegeorgescountymd.gov/" target="_blank">Prince
             George's County Open Data Project</a>.
@@ -71,7 +79,7 @@
           MD. This data is updated daily.</p>
         <br>
         <h2 class="header">Technology Stack</h2>
-        
+
 
       </div>
 
