--- a/src/index.html
+++ b/src/index.html
@@ -188,6 +188,23 @@
                     <p id="inspection_results"></p>
                   </div>
 
+                  <div class="col-sm-12">
+                    <hr class="my-3">
+                    <p>
+
+                      <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                        See detailed inspection results
+                      </button>
+                    </p>
+                    <div class="collapse" id="collapseExample">
+                      <div class="card card-body">
+                        <ul>
+                          <p id="detailed-results">No resturant or establishment selcted</p>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+
                 </div>
 
               </div>
