google maps integration

--- a/src/index.html
+++ b/src/index.html
@@ -179,8 +179,11 @@
 
                   <div class="col-sm-3">
                     <h3 class="results">Location</h3>
-                    <p id="address"></p>
 
+                    <p id="address"></p>
+                    <div id="location-link">
+
+                    </div>
                   </div>
 
                   <div class="col-sm-6">
