--- a/src/index.html
+++ b/src/index.html
@@ -156,7 +156,8 @@
             <!-- <div class="header">API Loader</div> -->
             <button class="btn btn-block btn-primary" onclick="loadData()"data-container="body"
             data-toggle="popover" data-placement="bottom" data-trigger="hover"
-            data-content="Warning - loading all data will cause significant slowdowns">Load All Data</button>
+            data-content="Warning - loading all data will cause significant slowdowns">Load All Data
+            </button>
 
             </button>
           </div>
