--- a/src/index.html
+++ b/src/index.html
@@ -130,7 +130,7 @@
                 <br>
                 <button id="filter-btn" type="button" class="btn btn-block btn-primary"
                   onclick="filterData()">Filter</button>
-                <button type="button" class="btn btn-block btn-primary" onclick="resetMap()">
+                <button type="button" class="btn btn-block btn-outline-primary" onclick="resetMap()">
                   Reset
                 </button>
 
